--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -51,13 +51,35 @@
 	│   ├── <a href="././S03-Angles/SES5097-Angles_droites_paralleles_2.pdf">SES5097-Angles_droites_paralleles_2.pdf</a><br>
 	│   ├── <a href="././S03-Angles/SES6094-Comprendre_la_notion_d_angle.pdf">SES6094-Comprendre_la_notion_d_angle.pdf</a><br>
 	│   └── <a href="././S03-Angles/SES6096-Nommer_des_angles.pdf">SES6096-Nommer_des_angles.pdf</a><br>
-	└── <a href="././S04-Relatifs/">S04-Relatifs</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Relatifs/5n4_act1a.pdf">5n4_act1a.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Relatifs/5n4_act2.pdf">5n4_act2.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Relatifs/5n4_ex2.pdf">5n4_ex2.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Relatifs/FA1-5-S06-introduction.pdf">FA1-5-S06-introduction.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Relatifs/FA2-5-S06-droites.pdf">FA2-5-S06-droites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Relatifs/FM-5-S06.pdf">FM-5-S06.pdf</a><br>
+	├── <a href="././S04-Relatifs/">S04-Relatifs</a><br>
+	│   ├── <a href="././S04-Relatifs/5n4_act1a.pdf">5n4_act1a.pdf</a><br>
+	│   ├── <a href="././S04-Relatifs/5n4_act2.pdf">5n4_act2.pdf</a><br>
+	│   ├── <a href="././S04-Relatifs/5n4_ex2.pdf">5n4_ex2.pdf</a><br>
+	│   ├── <a href="././S04-Relatifs/FA1-5-S06-introduction.pdf">FA1-5-S06-introduction.pdf</a><br>
+	│   ├── <a href="././S04-Relatifs/FA2-5-S06-droites.pdf">FA2-5-S06-droites.pdf</a><br>
+	│   └── <a href="././S04-Relatifs/FM-5-S06.pdf">FM-5-S06.pdf</a><br>
+	└── <a href="././S05-Symetrie-Centrale/">S05-Symetrie-Centrale</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/00.FM.5g1_crs.pdf">00.FM.5g1_crs.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act1.pdf">5g1_act1.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act2.pdf">5g1_act2.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act3.pdf">5g1_act3.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act4a.pdf">5g1_act4a.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act4b.pdf">5g1_act4b.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act5.pdf">5g1_act5.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex1.pdf">5g1_ex1.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex2a.pdf">5g1_ex2a.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex2b_cor.pdf">5g1_ex2b_cor.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex2b.pdf">5g1_ex2b.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex3a.pdf">5g1_ex3a.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex3b.pdf">5g1_ex3b.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex3c.pdf">5g1_ex3c.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4a.pdf">5g1_ex4a.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4b_cor.pdf">5g1_ex4b_cor.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4b.pdf">5g1_ex4b.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c_cor.pdf">5g1_ex4c_cor.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c.pdf">5g1_ex4c.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex5.pdf">5g1_ex5.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Symetrie-Centrale/5g1_ex6.pdf">5g1_ex6.pdf</a><br>
 	<hr>
 </body>
 </html>
