--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -51,6 +51,8 @@
 	└── <a href="././S04-Derivation/">S04-Derivation</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/11.FA-01-S04-Evaluation-fonction.pdf">11.FA-01-S04-Evaluation-fonction.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/12.FA-02-S04-Discriminant.pdf">12.FA-02-S04-Discriminant.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/13.FA-03-S04-Tableaux-variations-affines.pdf">13.FA-03-S04-Tableaux-variations-affines.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Derivation/EXERCICE-13.pdf">EXERCICE-13.pdf</a><br>
 	<hr>
 </body>
