--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -55,8 +55,11 @@
 	│   ├── <a href="././S04-Relatifs/5n4_act1a.pdf">5n4_act1a.pdf</a><br>
 	│   ├── <a href="././S04-Relatifs/5n4_act2.pdf">5n4_act2.pdf</a><br>
 	│   ├── <a href="././S04-Relatifs/5n4_ex2.pdf">5n4_ex2.pdf</a><br>
+	│   ├── <a href="././S04-Relatifs/bataille_relative.pdf">bataille_relative.pdf</a><br>
 	│   ├── <a href="././S04-Relatifs/FA1-5-S06-introduction.pdf">FA1-5-S06-introduction.pdf</a><br>
 	│   ├── <a href="././S04-Relatifs/FA2-5-S06-droites.pdf">FA2-5-S06-droites.pdf</a><br>
+	│   ├── <a href="././S04-Relatifs/FA3-01-S05-reperage-plan-001.pdf">FA3-01-S05-reperage-plan-001.pdf</a><br>
+	│   ├── <a href="././S04-Relatifs/FA3-01-S05-reperage-plan-002.pdf">FA3-01-S05-reperage-plan-002.pdf</a><br>
 	│   └── <a href="././S04-Relatifs/FM-5-S06.pdf">FM-5-S06.pdf</a><br>
 	└── <a href="././S05-Symetrie-Centrale/">S05-Symetrie-Centrale</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/00.FM.5g1_crs.pdf">00.FM.5g1_crs.pdf</a><br>
