--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -60,6 +60,7 @@
 	│   ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-3.pdf">FA5-S02-ProbaCondi-Arbres-3.pdf</a><br>
 	│   └── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
 	└── <a href="././S04-Trigonom%C3%A9trie/">S04-Trigonométrie</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/Exercices-supp/">Exercices-supp</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/00.FM-Trigonometrie.pdf">00.FM-Trigonometrie.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/01.FA-00-S04-Rappels.pdf">01.FA-00-S04-Rappels.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/01.FA-S04-Rappels-01.pdf">01.FA-S04-Rappels-01.pdf</a><br>
@@ -70,7 +71,9 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/11.FA01-Equations-Trigos.pdf">11.FA01-Equations-Trigos.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/12.FA01-Trigo-Sinus-Particuliers.pdf">12.FA01-Trigo-Sinus-Particuliers.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/20.DM1-Trigonometrie-Methode-Archim%C3%A8de.pdf">20.DM1-Trigonometrie-Methode-Archimède.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Trigonom%C3%A9trie/90.Formulaire_trigonometrie.pdf">90.Formulaire_trigonometrie.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/30-Exercices-trigo.pdf">30-Exercices-trigo.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/90.Formulaire_trigonometrie.pdf">90.Formulaire_trigonometrie.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Trigonom%C3%A9trie/tikz.pdf">tikz.pdf</a><br>
 	<hr>
 </body>
 </html>
