adding Premiere/index.html ✓

--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -70,9 +70,11 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/10.FA01-Trigo-Base.pdf">10.FA01-Trigo-Base.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/11.FA01-Equations-Trigos.pdf">11.FA01-Equations-Trigos.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/12.FA01-Trigo-Sinus-Particuliers.pdf">12.FA01-Trigo-Sinus-Particuliers.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/13-FA-03-S04-equations-trigo.pdf">13-FA-03-S04-equations-trigo.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/20.DM1-Trigonometrie-Methode-Archim%C3%A8de.pdf">20.DM1-Trigonometrie-Methode-Archimède.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/30-Exercices-trigo.pdf">30-Exercices-trigo.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/90.Formulaire_trigonometrie.pdf">90.Formulaire_trigonometrie.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Trigonom%C3%A9trie/exercices%20orthogonalit%C3%A9%20r%C3%A9vision%20bac%20blanc.pdf">exercices orthogonalité révision bac blanc.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Trigonom%C3%A9trie/tikz.pdf">tikz.pdf</a><br>
 	<hr>
 </body>
