--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -62,6 +62,9 @@
 	└── <a href="././S05-Positions-relatives-de-droites/">S05-Positions-relatives-de-droites</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/Activit%C3%A9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/Activit%C3%A9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/exercice-suppl%C3%A9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
