--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -59,16 +59,18 @@
 	│   ├── <a href="././S04-Cercle/20.Activit%C3%A9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/21.1.Flammant-rose-consigne.pdf">21.1.Flammant-rose-consigne.pdf</a><br>
 	│   └── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
-	└── <a href="././S05-Positions-relatives-de-droites/">S05-Positions-relatives-de-droites</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/Activit%C3%A9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/Activit%C3%A9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/exercice-suppl%C3%A9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
+	├── <a href="././S05-Positions-relatives-de-droites/">S05-Positions-relatives-de-droites</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/Activit%C3%A9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/Activit%C3%A9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/exercice-suppl%C3%A9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
+	│   ├── <a href="././S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
+	│   └── <a href="././S05-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
+	└── <a href="././S06-Perimetres/">S06-Perimetres</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
 	<hr>
 </body>
 </html>
