--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -48,12 +48,14 @@
 	│   ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex1a%20-%20Suites%20g%C3%A9om%C3%A9triques%20(exercices%20de%20base).pdf">STI2D_TN9_ex1a - Suites géométriques (exercices de base).pdf</a><br>
 	│   ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex1b%20-%20Suites%20g%C3%A9om%C3%A9triques%20et%20pourcentages.pdf">STI2D_TN9_ex1b - Suites géométriques et pourcentages.pdf</a><br>
 	│   └── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex3a%20-%20Bilan.pdf">STI2D_TN9_ex3a - Bilan.pdf</a><br>
-	└── <a href="././S04-Derivation/">S04-Derivation</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/11.FA-01-S04-Evaluation-fonction.pdf">11.FA-01-S04-Evaluation-fonction.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/12.FA-02-S04-Discriminant.pdf">12.FA-02-S04-Discriminant.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/13.FA-03-S04-Tableaux-variations-affines.pdf">13.FA-03-S04-Tableaux-variations-affines.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Derivation/EXERCICE-13.pdf">EXERCICE-13.pdf</a><br>
+	├── <a href="././S04-Second-degre/">S04-Second-degre</a><br>
+	│   ├── <a href="././S04-Second-degre/11.FA-01-S04-Evaluation-fonction.pdf">11.FA-01-S04-Evaluation-fonction.pdf</a><br>
+	│   ├── <a href="././S04-Second-degre/12.FA-02-S04-Discriminant.pdf">12.FA-02-S04-Discriminant.pdf</a><br>
+	│   ├── <a href="././S04-Second-degre/13.FA-03-S04-Tableaux-variations-affines.pdf">13.FA-03-S04-Tableaux-variations-affines.pdf</a><br>
+	│   ├── <a href="././S04-Second-degre/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
+	│   └── <a href="././S04-Second-degre/EXERCICE-13.pdf">EXERCICE-13.pdf</a><br>
+	└── <a href="././S05-Derivation/">S05-Derivation</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Derivation/Cours-S05-Derivation.pdf">Cours-S05-Derivation.pdf</a><br>
 	<hr>
 </body>
 </html>
