--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -77,8 +77,7 @@
 	│   ├── <a href="././S04-Trigonom%C3%A9trie/exercices%20orthogonalit%C3%A9%20r%C3%A9vision%20bac%20blanc.pdf">exercices orthogonalité révision bac blanc.pdf</a><br>
 	│   └── <a href="././S04-Trigonom%C3%A9trie/tikz.pdf">tikz.pdf</a><br>
 	└── <a href="././S05-Suites/">S05-Suites</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/%23Cours-S05-Suites.tex%23">#Cours-S05-Suites.tex#</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
 	<hr>
 </body>
 </html>
