--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -70,8 +70,13 @@
 	│   ├── <a href="././S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
 	│   └── <a href="././S05-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
 	└── <a href="././S06-Perimetres/">S06-Perimetres</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Cours-S06-Perimetres-page1.pdf">Cours-S06-Perimetres-page1.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_01.pdf">Ex-1a-Conversions_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_02.pdf">Ex-1a-Conversions_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
 	<hr>
 </body>
 </html>
