--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -55,7 +55,13 @@
 	│   ├── <a href="././S04-Second-degre/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
 	│   └── <a href="././S04-Second-degre/EXERCICE-13.pdf">EXERCICE-13.pdf</a><br>
 	└── <a href="././S05-Derivation/">S05-Derivation</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Derivation/Cours-S05-Derivation.pdf">Cours-S05-Derivation.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/1.%20Nombre%20d%C3%A9riv%C3%A9%20et%20tangente.pdf">1. Nombre dérivé et tangente.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/3.%20Fonctions%20d%C3%A9riv%C3%A9es.pdf">3. Fonctions dérivées.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Cours-S05-Derivation.pdf">Cours-S05-Derivation.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Ex-1a-S05-Taux-daccroissement.pdf">Ex-1a-S05-Taux-daccroissement.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive_01.pdf">Ex-1b-S05-Nombre-derive_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive_02.pdf">Ex-1b-S05-Nombre-derive_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive.pdf">Ex-1b-S05-Nombre-derive.pdf</a><br>
 	<hr>
 </body>
 </html>
