--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -76,7 +76,8 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
 	<hr>
 </body>
 </html>
