--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -82,7 +82,8 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c_cor.pdf">5g1_ex4c_cor.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c.pdf">5g1_ex4c.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex5.pdf">5g1_ex5.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Symetrie-Centrale/5g1_ex6.pdf">5g1_ex6.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex6.pdf">5g1_ex6.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Symetrie-Centrale/feuille_seyes-le_blog_de_fabrice_arnaud.pdf">feuille_seyes-le_blog_de_fabrice_arnaud.pdf</a><br>
 	<hr>
 </body>
 </html>
