--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -78,7 +78,8 @@
 	│   └── <a href="././S04-Trigonom%C3%A9trie/tikz.pdf">tikz.pdf</a><br>
 	└── <a href="././S05-Suites/">S05-Suites</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/Ex-1a-S05-Explicites.pdf">Ex-1a-S05-Explicites.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-1a-S05-Explicites.pdf">Ex-1a-S05-Explicites.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/Ex-1b-S05-Explicites.pdf">Ex-1b-S05-Explicites.pdf</a><br>
 	<hr>
 </body>
 </html>
