--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -62,7 +62,8 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Ex-1a-S05-Taux-daccroissement.pdf">Ex-1a-S05-Taux-daccroissement.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive_01.pdf">Ex-1b-S05-Nombre-derive_01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive_02.pdf">Ex-1b-S05-Nombre-derive_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive.pdf">Ex-1b-S05-Nombre-derive.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Derivation/Ex-1b-S05-Nombre-derive.pdf">Ex-1b-S05-Nombre-derive.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Derivation/Ex-2a-S05-Calcul-derive.pdf">Ex-2a-S05-Calcul-derive.pdf</a><br>
 	<hr>
 </body>
 </html>
