--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -78,7 +78,10 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-3b-S06-Perimetres-formules.pdf">Ex-3b-S06-Perimetres-formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-3c-S06-Perimetres-formules.pdf">Ex-3c-S06-Perimetres-formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Ex-3d-S06-Perimetres-formules.pdf">Ex-3d-S06-Perimetres-formules.pdf</a><br>
 	<hr>
 </body>
 </html>
