--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -61,29 +61,30 @@
 	│   ├── <a href="././S04-Relatifs/FA3-01-S05-reperage-plan-001.pdf">FA3-01-S05-reperage-plan-001.pdf</a><br>
 	│   ├── <a href="././S04-Relatifs/FA3-01-S05-reperage-plan-002.pdf">FA3-01-S05-reperage-plan-002.pdf</a><br>
 	│   └── <a href="././S04-Relatifs/FM-5-S06.pdf">FM-5-S06.pdf</a><br>
-	└── <a href="././S05-Symetrie-Centrale/">S05-Symetrie-Centrale</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/00.FM.5g1_crs.pdf">00.FM.5g1_crs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act1.pdf">5g1_act1.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act2.pdf">5g1_act2.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act3.pdf">5g1_act3.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act4a.pdf">5g1_act4a.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act4b.pdf">5g1_act4b.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_act5.pdf">5g1_act5.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex1.pdf">5g1_ex1.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex2a.pdf">5g1_ex2a.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex2b_cor.pdf">5g1_ex2b_cor.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex2b.pdf">5g1_ex2b.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex3a.pdf">5g1_ex3a.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex3b.pdf">5g1_ex3b.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex3c.pdf">5g1_ex3c.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4a.pdf">5g1_ex4a.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4b_cor.pdf">5g1_ex4b_cor.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4b.pdf">5g1_ex4b.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c_cor.pdf">5g1_ex4c_cor.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c.pdf">5g1_ex4c.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex5.pdf">5g1_ex5.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Symetrie-Centrale/5g1_ex6.pdf">5g1_ex6.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Symetrie-Centrale/feuille_seyes-le_blog_de_fabrice_arnaud.pdf">feuille_seyes-le_blog_de_fabrice_arnaud.pdf</a><br>
+	├── <a href="././S05-Symetrie-Centrale/">S05-Symetrie-Centrale</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/00.FM.5g1_crs.pdf">00.FM.5g1_crs.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_act1.pdf">5g1_act1.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_act2.pdf">5g1_act2.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_act3.pdf">5g1_act3.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_act4a.pdf">5g1_act4a.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_act4b.pdf">5g1_act4b.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_act5.pdf">5g1_act5.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex1.pdf">5g1_ex1.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex2a.pdf">5g1_ex2a.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex2b_cor.pdf">5g1_ex2b_cor.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex2b.pdf">5g1_ex2b.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex3a.pdf">5g1_ex3a.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex3b.pdf">5g1_ex3b.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex3c.pdf">5g1_ex3c.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex4a.pdf">5g1_ex4a.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex4b_cor.pdf">5g1_ex4b_cor.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex4b.pdf">5g1_ex4b.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c_cor.pdf">5g1_ex4c_cor.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex4c.pdf">5g1_ex4c.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex5.pdf">5g1_ex5.pdf</a><br>
+	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex6.pdf">5g1_ex6.pdf</a><br>
+	│   └── <a href="././S05-Symetrie-Centrale/feuille_seyes-le_blog_de_fabrice_arnaud.pdf">feuille_seyes-le_blog_de_fabrice_arnaud.pdf</a><br>
+	└── <a href="././S06-Relatifs-II-Operations/">S06-Relatifs-II-Operations</a><br>
 	<hr>
 </body>
 </html>
