--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -85,6 +85,7 @@
 	│   ├── <a href="././S05-Symetrie-Centrale/5g1_ex6.pdf">5g1_ex6.pdf</a><br>
 	│   └── <a href="././S05-Symetrie-Centrale/feuille_seyes-le_blog_de_fabrice_arnaud.pdf">feuille_seyes-le_blog_de_fabrice_arnaud.pdf</a><br>
 	└── <a href="././S06-Relatifs-II-Operations/">S06-Relatifs-II-Operations</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Relatifs-II-Operations/Cours-S06-Operation-sur-les-relatifs.pdf">Cours-S06-Operation-sur-les-relatifs.pdf</a><br>
 	<hr>
 </body>
 </html>
