--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -79,7 +79,8 @@
 	└── <a href="././S05-Suites/">S05-Suites</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-1a-S05-Explicites.pdf">Ex-1a-S05-Explicites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/Ex-1b-S05-Explicites.pdf">Ex-1b-S05-Explicites.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-1b-S05-Explicites.pdf">Ex-1b-S05-Explicites.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/STI2D_TN9_ex1a%20-%20Suites%20g%C3%A9om%C3%A9triques%20(exercices%20de%20base).pdf">STI2D_TN9_ex1a - Suites géométriques (exercices de base).pdf</a><br>
 	<hr>
 </body>
 </html>
