--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -69,19 +69,28 @@
 	│   ├── <a href="././S05-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
 	│   ├── <a href="././S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
 	│   └── <a href="././S05-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
-	└── <a href="././S06-Perimetres/">S06-Perimetres</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_01.pdf">Ex-1a-Conversions_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_02.pdf">Ex-1a-Conversions_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-3b-S06-Perimetres-formules.pdf">Ex-3b-S06-Perimetres-formules.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres/Ex-3c-S06-Perimetres-formules.pdf">Ex-3c-S06-Perimetres-formules.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres/Ex-3d-S06-Perimetres-formules.pdf">Ex-3d-S06-Perimetres-formules.pdf</a><br>
+	└── <a href="././S06-Perimetres-Aires/">S06-Perimetres-Aires</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_01.pdf">Ex-1a-Conversions_01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_02.pdf">Ex-1a-Conversions_02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-3b-S06-Perimetres-formules.pdf">Ex-3b-S06-Perimetres-formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-3c-S06-Perimetres-formules.pdf">Ex-3c-S06-Perimetres-formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-3d-S06-Perimetres-formules.pdf">Ex-3d-S06-Perimetres-formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-4a-S06-Aires.pdf">Ex-4a-S06-Aires.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-4b-S06-Aires-Figures.pdf">Ex-4b-S06-Aires-Figures.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-4c-S06-Aires-Figures.pdf">Ex-4c-S06-Aires-Figures.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-5a-S06-Aires.pdf">Ex-5a-S06-Aires.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-5b-S06-Aires.pdf">Ex-5b-S06-Aires.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-6a-S06-Aires-Formules.pdf">Ex-6a-S06-Aires-Formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-6b-S06-Aires-Formules.pdf">Ex-6b-S06-Aires-Formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Perimetres-Aires/Ex-6c-S06-Aires-Formules.pdf">Ex-6c-S06-Aires-Formules.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Perimetres-Aires/Ex-6d-S06-Aires-Formules.pdf">Ex-6d-S06-Aires-Formules.pdf</a><br>
 	<hr>
 </body>
 </html>
