--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -74,13 +74,17 @@
 	│   ├── <a href="././S04-Trigonom%C3%A9trie/20.DM1-Trigonometrie-Methode-Archim%C3%A8de.pdf">20.DM1-Trigonometrie-Methode-Archimède.pdf</a><br>
 	│   ├── <a href="././S04-Trigonom%C3%A9trie/30-Exercices-trigo.pdf">30-Exercices-trigo.pdf</a><br>
 	│   ├── <a href="././S04-Trigonom%C3%A9trie/90.Formulaire_trigonometrie.pdf">90.Formulaire_trigonometrie.pdf</a><br>
-	│   ├── <a href="././S04-Trigonom%C3%A9trie/exercices%20orthogonalit%C3%A9%20r%C3%A9vision%20bac%20blanc.pdf">exercices orthogonalité révision bac blanc.pdf</a><br>
 	│   └── <a href="././S04-Trigonom%C3%A9trie/tikz.pdf">tikz.pdf</a><br>
 	└── <a href="././S05-Suites/">S05-Suites</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Cours-Formules-Suites.pdf">Cours-Formules-Suites.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Cours-S05-Suites.pdf">Cours-S05-Suites.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-1a-S05-Explicites.pdf">Ex-1a-S05-Explicites.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-1b-S05-Explicites.pdf">Ex-1b-S05-Explicites.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/STI2D_TN9_ex1a%20-%20Suites%20g%C3%A9om%C3%A9triques%20(exercices%20de%20base).pdf">STI2D_TN9_ex1a - Suites géométriques (exercices de base).pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-2a-S05-Suites-g%C3%A9om%C3%A9triques.pdf">Ex-2a-S05-Suites-géométriques.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-3a-S05-Determiner-Raison.pdf">Ex-3a-S05-Determiner-Raison.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-4a-S05-Somme-Arithm%C3%A9tique.pdf">Ex-4a-S05-Somme-Arithmétique.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S05-Suites/Ex-4b-S05-Somme-G%C3%A9om%C3%A9trique.pdf">Ex-4b-S05-Somme-Géométrique.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S05-Suites/Ex-5a-S05-Probl%C3%A8mes.pdf">Ex-5a-S05-Problèmes.pdf</a><br>
 	<hr>
 </body>
 </html>
